Bug 1770984 - Do not support "SECONDLY" or "MINUTELY" recurring events. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D148441

--HG--
extra : amend_source : 1eeabd4812d478c083f9df44cf6959d0be2cd150